# Rustlang2024

./: .gitignore  Cargo.toml  Makefile
axum-app2024/: Cargo.toml
axum-app2024/src/: lib.rs  main.rs
axum-app2024/src/http/: health_check.http
axum-app2024/src/models/: health_check.rs  mod.rs
axum-app2024/src/mods/: mod.rs
axum-app2024/src/mods/utils/: error.rs  mod.rs  utilities.rs
axum-app2024/src/utils/: error.rs  utilities.rs
axum-app2024/src/web/: mod.rs  routes.rs  run_server.rs  start_app.rs
axum-app2024/src/web/auth/: routes_login.rs
axum-app2024/src/web/handlers/: health_check.rs
axum-app2024/tests/: quick_dev.rs
example-code/: Cargo.toml
example-code/src/: lib.rs  ticket_example.rs
example-code/src/concert_tickets/: ticket_example.rs
example-code/src/concert_tickets/models/: ticket.rs
example-code/src/concert_tickets/utils/: helpers.rs  mod.rs
example-code/src/models/: mod.rs  ticket.rs
example-code/src/rust_data_sync_demo/: data_sync_app.rs
example-code/src/rust_data_sync_demo/models/: mod.rs
example-code/src/rust_data_sync_demo/models/stock/: stock_purchase.rs
example-code/src/rust_data_sync_demo/models/users/: user.rs
example-code/src/stock_trading_backend/: stock_app.rs
example-code/src/stock_trading_backend/models/: audit_log.rs  mod.rs  trade_account.rs  user.rs
example-code/src/stock_trading_backend/models/account/: account_status.rs  user.rs
example-code/src/stock_trading_backend/models/trading/: order.rs  stock.rs  trade_account.rs
example-code/src/stock_trading_backend/utils/: helpers.rs  mod.rs
example-code/src/utils/: helpers.rs  mod.rs  rc_move.rs
target 2/: .rustc_info.json
targetc3FHWx/: .rustc_info.json
testing_loco_rs/: .rustfmt.toml  Cargo.toml
testing_loco_rs/config/: development.yaml  test.yaml
testing_loco_rs/examples/: playground.rs
testing_loco_rs/src/controllers/: auth.rs  notes.rs
testing_loco_rs/src/models/: users.rs
testing_loco_rs/src/views/: auth.rs
testing_loco_rs/tests/models/: users.rs
testing_loco_rs/tests/requests/: auth.rs  prepare_data.rs  user.rs
testing_loco_rs/tests/tasks/: seed.rs
utility_lib/: Cargo.toml
utility_lib/src/: lib.rs
utility_lib/src/utils/: error.rs  mod.rs  utilities.rs
