[package]
name = "axum-app2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
tower-http = { version = "0.5.0", features = ["fs"] }
colored_json = "4.1.0"
yansi = "0.5.1"
colored = "2.0.4"

[dev-dependencies]
anyhow = "1.0.75"
# Uses reqwest & cookie store.
httpc-test = { version = "0.1.8", features = ["color-output"] }
