# axum-app2024/Cargo.toml
[package]
name = "axum-app2024"
version = "0.1.0"
edition = "2021"
# _______________________________________________
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# _______________________________________________

[dependencies]
# lib-tools import global utilities in the workspace for members
utility_lib = { path = "../utility_lib" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
tower-http = { version = "0.5.0", features = ["fs"] }
colored_json = "4.1.0"
colored = "2.0.4"
color-eyre = "0.6.2"
# _______________________________________________

[dev-dependencies]
anyhow = "1.0.75"
# Uses reqwest & cookie store.
httpc-test = { version = "0.1.8", features = ["color-output"] }
# _______________________________________________