[package]
name = "example-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ticket_example"
path = "src/ticket_example.rs"

[dependencies]
# lib-tools import global utilities in the workspace for members
utility_lib = { path = "../utility_lib" }
color-print = "0.3.5"
iso_currency = "0.4.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
