[package]
name = "example-code"
version = "0.1.0"
edition = "2021"

# declarations to be able to use multiple main files in a single project
[[bin]]
name = "ticket_example"
path = "src/concert_tickets/ticket_example.rs"

[[bin]]
name = "stock_app"
path = "src/stock_trading_backend/stock_app.rs"

[dependencies]
# lib-tools import global utilities in the workspace for members
utility_lib = { path = "../utility_lib" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["v4"] }