# utility_lib/Cargo.toml
[package]
name = "utility_lib"
version = "0.1.0"
edition = "2021"
# _______________________________________________
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# _______________________________________________

[dependencies]
yansi = "0.5.1"
axum = { version = "0.7.1", features = ["macros"] }
# _______________________________________________
