# utility_lib/Cargo.toml
[package]
name = "utility_lib"
version = "0.1.0"
edition = "2021"
# _______________________________________________
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# _______________________________________________

[dependencies]
yansi = "0.5.1"
color-print = "0.3.5"
axum = { version = "0.7.1", features = ["macros"] }
bcrypt = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
rand = "0.8.5"
iso_currency = "0.4.4"
# _______________________________________________
